--- a/requirements.txt
+++ b/requirements.txt
@@ -7,22 +7,22 @@ brotlipy==0.7.0
 cchardet==2.1.7
 certifi==2020.6.20
 cffi==1.15.0
-charset-normalizer==2.0.10
-click==8.0.3
-Flask==2.0.2
+charset-normalizer==2.0.12
+click==8.0.4
+Flask==2.0.3
 frozenlist==1.3.0
 idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-multidict==5.2.0
-orjson==3.6.6
-py-cord @ git+https://github.com/Pycord-Development/pycord.git@5244381b77a44b9383cca6afa7e99924c128b510
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+multidict==6.0.2
+orjson==3.6.7
+py-cord==2.0.0b5
 pycares==4.1.2
 pycparser==2.21
 PyNaCl==1.5.0
 requests==2.27.1
-urllib3==1.26.8
-Werkzeug==2.0.2
+urllib3==1.26.9
+Werkzeug==2.0.3
 yarl==1.7.2
 youtube-dl==2021.12.17
