update requirements & van mau

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-py-cord
-pynacl
-aiodns
-brotlipy
-cchardet 
-orjson
-youtube-dl
-requests
-pillow
-python-dotenv
+py-cord==2.2.2
+pynacl==1.5.0
+aiodns==3.0.0
+brotlipy==0.7.0
+cchardet==2.1.7
+orjson==3.8.0
+youtube-dl==2021.12.17
+requests==2.28.1
+pillow==9.2.0
+python-dotenv==0.21.0
